--- a/pom.xml
+++ b/pom.xml
@@ -62,16 +62,21 @@
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.mybatis.dynamic-sql</groupId>-->
+<!--      <artifactId>mybatis-dynamic-sql</artifactId>-->
+<!--      <version>1.1.4</version>-->
+<!--    </dependency>-->
     <dependency>
-      <groupId>org.mybatis.dynamic-sql</groupId>
-      <artifactId>mybatis-dynamic-sql</artifactId>
-      <version>1.1.4</version>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus-boot-starter</artifactId>
+      <version>3.5.1</version>
     </dependency>
-    <dependency>
-      <groupId>org.mybatis.spring.boot</groupId>
-      <artifactId>mybatis-spring-boot-starter</artifactId>
-      <version>1.3.2</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.mybatis.spring.boot</groupId>-->
+<!--      <artifactId>mybatis-spring-boot-starter</artifactId>-->
+<!--      <version>1.3.2</version>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-log4j2</artifactId>
