--- a/exception-manager/pom.xml
+++ b/exception-manager/pom.xml
@@ -26,10 +26,10 @@
       <groupId>com.alibaba.cloud</groupId>
       <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>org.springframework.boot</groupId>-->
-<!--      <artifactId>spring-boot-starter-data-redis</artifactId>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
 <!--    <dependency>-->
 <!--      <groupId>org.springframework.session</groupId>-->
 <!--      <artifactId>spring-session-data-redis</artifactId>-->
