--- a/exception-manager/pom.xml
+++ b/exception-manager/pom.xml
@@ -8,7 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-
+<!-- groupId和version如果和父工程一致，则可以省略 -->
   <artifactId>exception-manager</artifactId>
 
   <properties>
@@ -17,7 +17,6 @@
   </properties>
 
   <dependencies>
-
     <dependency>
       <groupId>com.alibaba.cloud</groupId>
       <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
@@ -78,8 +77,8 @@
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-maven-plugin</artifactId>
-    <version>2.6.2</version>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>2.6.2</version>
         <configuration>
           <mainClass>com.xzlcorp.exception.manager.ExceptionManagerApplication</mainClass>
           <!-- <outputDirectory>../target</outputDirectory> -->
