--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,9 @@
   <name>exception-service</name>
   <description>前端异常监控</description>
   <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>11</java.version>
     <harbor>registry.cn-beijing.aliyuncs.com</harbor>
     <harborRepo>wxr_dev</harborRepo>
@@ -49,7 +52,6 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-aop</artifactId>
@@ -126,21 +128,14 @@
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.0</version>
-        <configuration>
-          <source>11</source>
-          <target>11</target>
-          <encoding>UTF-8</encoding>
-        </configuration>
-      </plugin>
 <!--      <plugin>-->
-<!--        <groupId>org.springframework.boot</groupId>-->
-<!--        <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--        <groupId>org.apache.maven.plugins</groupId>-->
+<!--        <artifactId>maven-compiler-plugin</artifactId>-->
+<!--        <version>3.6.0</version>-->
 <!--        <configuration>-->
-<!--          <skip>true</skip>-->
+<!--          <source>11</source>-->
+<!--          <target>11</target>-->
+<!--          <encoding>UTF-8</encoding>-->
 <!--        </configuration>-->
 <!--      </plugin>-->
       <plugin>
