--- a/exception-transfer/pom.xml
+++ b/exception-transfer/pom.xml
@@ -37,6 +37,11 @@
 <!--      <artifactId>sentinel-core</artifactId>-->
 <!--      <version>1.8.0</version>-->
 <!--    </dependency>-->
+    <!--AMQP依赖，包含RabbitMQ-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-amqp</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
